<resources>
    <string name="app_name">OntologyValidation</string>

    <string name="tip_exit_app">Double click to exit!!!</string>
    <string name="action_sign_in">Login</string>

    <string name="label_btn_true">True</string>
    <string name="label_btn_not_sure">\?</string>
    <string name="label_btn_false">False</string>
    <string name="menu_item_sync_title">Sync</string>
    <string name="start_sync">Start Sync</string>
    <string name="success_sync">Sync Successfully!</string>
    <string name="failed_sync">Sync Failed:(</string>
    <string name="check_update">Check Update</string>
    <string name="config_choose_language">Change Language</string>
    <string name="config_check_update">Check Update</string>
    <string name="config_about">About</string>
    <string name="config_clear_cache">Clear Cache</string>
    <string name="fragment_list_title">Questions List</string>
    <string name="fragment_statistics_title">Statistics</string>
    <string name="fragment_user_username">username</string>
    <string name="fragment_user_sign">sign</string>
    <string name="fragment_user_settings">Settings</string>
    <string name="fragment_user_change_wallpaper">Change Wallpaper</string>
    <string name="fragment_user_title">User Info</string>
    <string name="activity_main_list_item">List</string>
    <string name="activity_main_item_statistics">Statistics</string>
    <string name="activity_main_item_user">User</string>
    <string name="email_or_username">Email/Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_register">No account yet? Create one</string>
    <string name="copyright">Copyright ©swu.edu.cn, all rights reserved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Version 1.0 beta</string>
    <string name="clear_cache_result">Clear Complete!</string>
    <string name="check_update_result">This application is up to date.</string>
    <string name="activity_login_text">Login</string>
    <string name="menu_item_detail_text">more</string>
    <string name="menu_item_more_title">More</string>
    <string name="materials_about_question">Materials</string>
    <string name="show_graph">Show Graph</string>
    <string name="true_label">True</string>
    <string name="false_label">False</string>
    <string name="not_sure_label">Not Sure</string>
    <string name="not_checked_label">Not Checked</string>
</resources>
