<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



<LinearLayout
              android:orientation="vertical"
              android:gravity="center"
              android:background="@color/default_white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
        android:src="@drawable/ic_launcher"
        android:layout_width="108dp"
        android:layout_height="108dp"/>
    <TextView
        android:textColor="#000000"
        android:textSize="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textStyle="italic"
        android:textSize="12dp"
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:text="@string/copyright"/>
</RelativeLayout>