<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.swu.ontologyvalidation.context.activity.MainActivity">

    <RadioGroup
        android:id="@+id/ll_bottom_btn_group"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <RadioButton
            android:id="@+id/btn_list"
            android:text="@string/activity_main_list_item"
            android:drawableTop="@drawable/ic_list_small"
            style="@style/NavigationRadioButton"/>
        <RadioButton
            android:id="@+id/btn_count"
            android:text="@string/activity_main_item_statistics"
            android:drawableTop="@drawable/ic_ruler_small"
            style="@style/NavigationRadioButton"/>
        <RadioButton
            android:id="@+id/btn_settings"
            android:text="@string/activity_main_item_user"
            android:drawableTop="@drawable/ic_user_small"
            style="@style/NavigationRadioButton"/>
    </RadioGroup>




    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_above="@id/ll_bottom_btn_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>



</RelativeLayout>
